[package]
name = "shmemfdrs2"
version = "1.0.0"
authors = [ "MaxVerevkin <maxxverrr@gmail.com>", "Val Packett <val@packett.cool>", "The Servo Project Developers" ]
keywords = [ "memfd", "SHM_ANON", "SharedMemory", "shm", "IPC" ]
categories = [ "os::unix-apis" ]
description = "Creates anonymous shared memory file descriptors for IPC on Unix platforms, using memfd/SHM_ANON/shm_open."
license = "MIT/Apache-2.0"
homepage = "https://github.com/MaxVerevkin/shmemfdrs2"
repository = "https://github.com/MaxVerevkin/shmemfdrs2"
edition = "2021"

[dependencies]
libc = "0.2"
